# caduvelox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  asan_suppressions.txt
.github/workflows/: ci.yml
examples/rest_api_server/: CMakeLists.txt  README.md  rest_api_server.cpp
examples/static_https_server/: CMakeLists.txt  README.md  caduvelox.service.example  deploy.sh  static_https_server.cpp
examples/static_https_server/static_site/: index.html
examples/static_https_server/static_site/files/: script.js  style.css
include/caduvelox/: Config.hpp  Server.hpp  ServerConfig.hpp  ServerState.hpp  ServiceRing.hpp
include/caduvelox/http/: HTTPFileJob.hpp  HttpConnectionRecvHandler.hpp  HttpParser.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpServer.hpp  HttpTypes.hpp  SingleRingHttpServer.hpp
include/caduvelox/jobs/: AcceptJob.hpp  CancelJob.hpp  EventFdMonitorJob.hpp  IdleTimeoutJob.hpp  IoJob.hpp  JobTransaction.hpp  KTLSContextHelper.hpp  KTLSJob.hpp  MultishotRecvJob.hpp  SpliceFileJob.hpp  WriteJob.hpp
include/caduvelox/logger/: AsyncLogger.hpp  ConsoleLogger.hpp  FileLogger.hpp  Logger.hpp
include/caduvelox/ring_buffer/: BufferRingCoordinator.hpp  MPMCRingBuffer.hpp
include/caduvelox/threading/: AffinityWorkerPool.hpp  SimpleWorkerPool.hpp
include/caduvelox/util/: EventFd.hpp  JobStateMachine.hpp  PoolDeleter.hpp  PoolManager.hpp  ProvidedBufferToken.hpp  SPSCQueue.hpp  ThreadLocalPool.hpp  WorkerResponse.hpp
scripts/: docker-entrypoint.sh
src/: Server.cpp  ServiceRing.cpp
src/http/: HTTPFileJob.cpp  HttpConnectionRecvHandler.cpp  HttpParser.cpp  HttpRouter.cpp  HttpServer.cpp  SingleRingHttpServer.cpp
src/jobs/: AcceptJob.cpp  EventFdMonitorJob.cpp  IdleTimeoutJob.cpp  KTLSContextHelper.cpp  KTLSJob.cpp  SpliceFileJob.cpp  WriteJob.cpp
src/logging/: AsyncLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp  Logger.cpp
src/ring_buffer/: BufferRingCoordinator.cpp  MPMCRingBuffer.hpp  NotifyingRingBuffer.hpp  VyukovRingBuffer.hpp
src/threading/: AffinityWorkerPool.cpp  SimpleWorkerPool.cpp
tests/: CMakeLists.txt  ServerTestInterface.hpp  accept_job_error_cleanup_test.cpp  connection_stress_test.cpp  http_connection_pool_leak_test.cpp  http_parser_unit_test.cpp  http_router_unit_test.cpp  http_server_state_test.cpp  idle_timeout_test.cpp  job_http_pipelining_test.cpp  job_http_server_test.cpp  job_ktls_http_pipelining_test.cpp  job_ktls_http_send_file_test.cpp  job_state_machine_test.cpp  logger_test.cpp  multi_ring_ktls_shutdown_test.cpp  multishot_recv_rearm_test.cpp  security_regression_test.cpp  server_config_test.cpp  server_state_wiring_test.cpp  shutdown_guard_test.cpp  static_https_server_test.cpp  test_main.cpp
tests/util/ring_buffer/: mpmc_ring_buffer_test.cpp  notifying_ring_buffer_test.cpp  vyukov_ring_buffer_test.cpp
